fixed header - light mode dark mode needs to be put in the header

--- a/style.css
+++ b/style.css
@@ -78,21 +78,20 @@ h2 {
     font-style: italic;
 }
 
-article.content {
-    border-radius: 25px;
-    margin: auto;
-    min-width: 100px;
-    max-width: 1280px;
-    text-align: left;
-    padding: 20px;
-}
 
-div#picker {
+div.header {
+    background-color: var(--secondary);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+    box-shadow: 0px 5px 10px #00000033;
     display: flex;
     justify-items: center;
     justify-content: center;
     align-items: center;
-    margin: 0;
     text-align: center;
 }
 
@@ -106,7 +105,7 @@ div.footer {
     padding: 16px;
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
-    box-shadow: 0px -5px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px -5px 10px #00000033;
 }
 
 
@@ -144,7 +143,7 @@ li.navbar:hover {
 #navImage {
     height: 48px;
     width: 48px;
-    padding: 32px;
+    padding: 16px;
     /* transition: all .3s cubic-bezier(0.4, 0, 1, 1); */
     transition: all 0.3s cubic-bezier(0.18, 0.89, 0.43, 1.54);
     float: left;
@@ -156,6 +155,14 @@ li.navbar:hover {
     padding: 16px;
 }
 
+article.content {
+    border-radius: 25px;
+    margin: auto;
+    min-width: 100px;
+    max-width: 1280px;
+    text-align: left;
+    padding: 20px;
+}
 
 /* Styles for buttons */
 .btn {
